<resources>
    <string name="app_name">QPython</string>
    <string name="app_name_label">QPython</string>
    <string name="app_url">http://quseit.com/</string>
    <string name="app_home">http://quseit.com/</string>
    <string name="omenu_update">Check for new version</string>
    <string name="omenu_exit">Exit</string>
    <string name="up_soft">Update</string>
    <string name="up_soft_state_found">New version found</string>
    <string name="up_soft_state_no_found">Already the newest version</string>
    <string name="up_soft_download">Start to download ...</string>
    <string name="up_soft_update">Start to update ...</string>
    <string name="up_soft_downloading">Downloading ...</string>
    <string name="up_soft_updating">Updating ...</string>
    <string name="up_soft_done">Success update</string>
    <string name="up_soft_failed">An error occurs during download</string>
    <string name="up_update_failed">An error occurs during update</string>
    <string name="promote_ok">OK</string>
    <string name="promote_cancel">Cancel</string>
    <string name="not_implement">No such feature</string>
    <string name="city_nolimit">No area limited</string>
    <string name="search_no_term">Please input the name of the song, the album, or the artist</string>
    <string name="m_title_0">Home</string>
    <string name="m_title_1">Download</string>
    <string name="m_title_2">Videos downloaded</string>
    <string name="m_title_3">About</string>
    <string name="m_title_recommended">Sponsored ads</string>
    <string name="wating_title">Loading ...</string>
    <string name="get_data_failure">Network error, retry later</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_txt">Content</string>
    <string name="alert_dialog_hide">Hide</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_close">Close</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_two_buttons_msg">Header title</string>
    <string name="alert_dialog_multi_choice_cursor">Dialog box</string>
    <string name="select_dialog">Please choose ...</string>
    <string name="alert_dialog_something">Dialog box</string>
    <string name="confirm_exit">Confirm to exit ?</string>
    <string name="confirm_title">Confirm ?</string>
    <string name="confirm_download">{0} {1} is downloading, are you sure to re-download now?</string>
    <string name="confirm_download_target_exitst">{0} {1} exists, do you want to re-download it?</string>
    <string name="confirm_download_with_size">the size of {0} {1} is about {2} M, are you sure to download now?</string>
    <string name="confirm_to_download">Are you sure to download {0} {1}?</string>
    <string name="net_error">There was an error, please check your network connection</string>
    <string name="new_web_page">New</string>
    <string name="download_file">Start to download {0}</string>
    <string name="get_voice_exception">The song is not available, you cannot download it now</string>
    <string name="music_playing">What song is playing?</string>
    <string name="play_this_music">Do you want to add {0} to playlist?</string>
    <string name="info_play">Play</string>
    <string name="info_pause">Pause</string>
    <string name="info_resume">Resume</string>
    <string name="task_pause">Paused</string>
    <string name="info_share_withbt">Share</string>
    <string name="info_rename">Rename</string>
    <string name="current_dir">Location: {0}</string>
    <string name="play_list">Playlist</string>
    <string name="no_play_music">No song is played</string>
    <string name="get_hot_list_exception">Network error, please try again later</string>
    <string name="download"><![CDATA[Download]]></string>
    <string name="hot_music">Hot Music</string>
    <string name="my_player">Player</string>
    <string name="added_playlist">OK</string>
    <string name="about_content">Tube Downloader can help you find and download interesting videos from YouTube, It\'s the best way you enjoy the videos of YouTube on mobile </string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="restart_plugin">TB Service</string>
    <string name="privacy_url">http://quseit.com/privacy.html</string>
    <string name="my_app_url">http://quseit.com/</string>
    <string name="remove_this_music">Delete {0} from playlist</string>
    <string name="removed_playlist">OK</string>
    <string name="search_mp3_voice">Voice search</string>
    <string name="search_failed_for_no_googlevoice">You need to install Google voice search App</string>
    <string name="mp3_opt">Choose</string>
    <string name="search_no_data">Not found, try again?</string>
    <string name="file_not_exits">The file did not exist</string>
    <string name="info_download">Download</string>
    <string name="info_download_play">Play online</string>
    <string name="info_delete">Delete</string>
    <string name="info_play_now">Play now</string>
    <string name="info_play_delete">Delete from playlist</string>
    <string name="next_handler">Wait a second</string>
    <string name="music_played">The music is playing</string>
    <string name="download_ok">{0} was download successfully</string>
    <string name="removed_playlist_noneed">The music was not in the playlist</string>
    <string name="m_title_aboutus">About</string>
    <string name="m_title_plugin">Plugins</string>
    <string name="m_title_search">Videos Search</string>
    <string name="m_title_local">Videos downloaded</string>
    <string name="m_title_hot">Hot Music</string>
    <string name="not_found">The music is not available</string>
    <string name="download_queue">Downloader</string>
    <string name="download_queue_1">Current tasks: {0}</string>
    <string name="download_cancel">{0} was cancled</string>
    <string name="download_pause">{0} was paused</string>
    <string name="download_exception">You could not download this video now, please retry later</string>
    <string name="download_delete_op">Delete</string>
    <string name="download_cancel_op">Cancel</string>
    <string name="max_downloader">Has reached the end of the maximum number of tasks, please wait others completed</string>
    <string name="loading">Loading ...</string>
    <string name="views">{0} views</string>
    <string name="cat_all">Hot videos on YouTube (today) </string>
    <string name="hot_movie_list">Hot videos</string>
    <string name="cat_top_rated">Top rated</string>
    <string name="cat_top_favorites">Top favorites</string>
    <string name="cat_most_viewed">Most viewed</string>
    <string name="cat_most_recent">Most recent</string>
    <string name="cat_most_discussed">Most discussed</string>
    <string name="cat_most_linked">Most linked</string>
    <string name="cat_most_responded">Most responded</string>
    <string name="cat_recently_featured">Recently featured</string>
    <string name="cat_watch_on_mobile">Watch on mobile</string>
    <string name="plugin_setting">Setting</string>
    <string name="plugin_ftp">FTP Service</string>
    <string name="plugin_noadd">Upgrade to Python3.6 version</string>
    <string name="plugin_pip">PIP Console</string>
    <string name="plugin_script_extend_1">Script Plugin</string>
    <string name="proxy_setting">Proxy Setting</string>
    <string name="proxy_host">Proxy host</string>
    <string name="proxy_port">Proxy port</string>
    <string name="proxy_username">Username</string>
    <string name="proxy_pwd">Password</string>
    <string name="proxy_save">Back</string>
    <string name="download_setting">Download setting</string>
    <string name="yd_error_1">Failed to get content</string>
    <string name="yd_error_2">Failed to connect YouTube</string>
    <string name="yd_error_3">Failed to get download link</string>
    <string name="noad_desc">No AD Plugin can help you to remove the ads from App.You need to pay for it</string>
    <string name="scriptextend_desc">Script plugin help you get more excellent features.\nIf you choose enable, App will download a script package and install it.\nAfter that, you can install script plugins from {0}. Even you can developer a script</string>
    <string name="noad_desc_price">It will cost:  {0} $</string>
    <string name="noad_plugin_get">Get it</string>
    <string name="script_plugin_enable">Enable it</string>
    <string name="script_plugin_disable">Disable it</string>
    <string name="share">Share</string>
    <string name="download_info">Total: {0} M</string>
    <string name="current_cat">{0}</string>
    <string name="using_3g">You are using slow network</string>
    <string name="time_created">Created at: {0}</string>
    <string name="share_info">{0}</string>
    <string name="recent_downloaded">Files downloaded recently</string>
    <string name="m">M</string>
    <string name="pause_op_ok">The task was paused</string>
    <string name="url_invalid">Link is invalid</string>
    <string name="videos">{0} Video(s)</string>
    <string name="not_sd">Please insert SD Card first</string>
    <string name="err_need_int">Port should be integer</string>
    <string name="err_ip_format">Illegal IP Address</string>
    <string name="m_folder">Local</string>
    <string name="m_search">Video Search</string>
    <string name="promote_background">Background</string>
    <string name="feedback_content">Let us know your suggestions, comments and concerns by filling out the form below</string>
    <string name="form_submit">Submit</string>
    <string name="form_ok">Success</string>
    <string name="form_failed">Fail</string>
    <string name="form_exception">Exception</string>
    <string name="feedback">Feedback</string>
    <string name="cannot_play">Cannot open the file</string>
    <string name="feedback_ok">Thank you for your feedback</string>
    <string name="feedback_email">Email</string>
    <string name="feed_back_content_notvalid">The content can not be empty</string>
    <string name="feed_back_email_notvalid">Invalid Email</string>
    <string name="confirm_delete">Are you sure to delete it?</string>
    <string name="need_network">No connection, please check it</string>
    <string name="plugin_noad_ok">Success to pay</string>
    <string name="you_own_noad">You have payed for this plugin</string>
    <string name="you_own_scriptExtend">You have enable Script plugin</string>
    <string name="get_script_plugin">Install script</string>
    <string name="about_about">About</string>
    <string name="about_other">More</string>
    <string name="check_update">Check for new version</string>
    <string name="plugin_script">Script Plugin Support</string>
    <string name="plugin_script_enable">Script Plugin</string>
    <string name="scriptrunning">Script running</string>
    <string name="script_plugin_use"><![CDATA[Install & run plugin]]></string>
    <string name="nav_home">Local</string>
    <string name="nav_add">New</string>
    <string name="nav_man">Subscribe</string>
    <string name="nav_interpreter">Choose Python Branch</string>
    <string name="err_caught">Catch an exception, it will restart</string>
    <string name="plugin_player">Optimized Player Codec</string>
    <string name="plugin_select_player">Select optimized codec</string>
    <string name="plugin_sl4a">SL4A Service</string>
    <string name="plugin_pylib">Libraries manage</string>
    <string name="plugin_defaultroot">Default Root</string>
    <string name="pylib_setting">QPython Plugins</string>
    <string name="rate_btn">Rate it</string>
    <string name="feedback_btn">Get help</string>
    <string name="follow_community_btn"><![CDATA[Visit it\'s homepage]]></string>
    <string name="plugin_mediacenter">Media center</string>
    <string name="plugin_defaultqpy">Default Program</string>
    <string name="ad_free">Upgrade to Pro edition</string>
    <string name="plugin_resetprivate">Reset private storage</string>
</resources>