<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/cwhite3"
    android:orientation="vertical"
    >
	<FrameLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:scrollbars="horizontal"
		>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical"
			>

			<TextView
				android:id="@+id/adTitle"
				style="@style/gridBox_desc"
				android:text="@string/m_title_recommended"
				android:textSize="17sp"
				android:visibility="gone"
				/>

			<View
				android:id="@+id/adLine"
				style="@style/p_line"
				android:visibility="gone"

			/>
			<com.quseit.view.AdSlidShowView
        		android:id="@+id/adSlid2"
        		android:layout_width="fill_parent"
       	 		android:layout_height="120dp"
       	 		android:layout_marginLeft="10dip"
       	 		android:layout_marginRight="10dip"

        		android:visibility="gone" >
    		</com.quseit.view.AdSlidShowView>

			<!--script-->
			<TextView
				style="@style/gridBox_desc"
				android:text="@string/m_title_aboutus"
				android:textSize="17sp" />

			<View
				style="@style/p_line" />

			<!-- ABOUT US -->
			<RelativeLayout
				style="@style/gridBox"
				android:onClick="onAbout"
				>
				<TextView
					android:id="@+id/plugin_aboutus"
					style="@style/gridBox_Title"
					android:text="@string/about_about"
					/>
				<TextView
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_aboutus"
					android:layout_toRightOf="@id/plugin_aboutus"
				android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onAbout"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>

			<!-- Privacy -->
			<RelativeLayout
				style="@style/gridBox"
				android:onClick="onPrivacy"
				>
				<TextView
					android:id="@+id/plugin_privacy"
					style="@style/gridBox_Title"
					android:text="@string/privacy_title"
					/>
				<TextView
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_privacy"
					android:layout_toRightOf="@id/plugin_privacy"
					android:text=""
					/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onPrivacy"
					android:src="@drawable/mini_right_tag"
					/>
			</RelativeLayout>


			<!-- NoAD -->
			<RelativeLayout
				android:id="@+id/plugin_pro_box2"
				style="@style/gridBox"
				android:onClick="onNoAD"
				android:visibility="gone"
				>
				<TextView
					android:id="@+id/plugin_noadd"
					style="@style/gridBox_Title"
					android:text="@string/plugin_noadd"
					/>
				<TextView
					android:id="@+id/plugin_noadd_value"
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_noadd"
					android:layout_toRightOf="@id/plugin_noadd"
				android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onNoAD"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>


			<!-- CHECK FOR UPDATE -->
			<RelativeLayout
				style="@style/gridBox"
				android:onClick="onCheckUpdate"
				>
				<TextView
					android:id="@+id/plugin_checkupdate"
					style="@style/gridBox_Title"
					android:text="@string/omenu_update"
					/>
				<TextView
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_checkupdate"
					android:layout_toRightOf="@id/plugin_checkupdate"
				android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onCheckUpdate"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>

			<!-- RATE US -->
			<RelativeLayout
				style="@style/gridBox"
				android:onClick="onRate"
				>
				<TextView
					android:id="@+id/plugin_rate"
					style="@style/gridBox_Title"
					android:text="@string/rate_btn"
					/>
				<TextView
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_rate"
					android:layout_toRightOf="@id/plugin_rate"
				android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onRate"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>


			<!-- FEEDBACK -->
			<RelativeLayout
				style="@style/gridBox"
				android:onClick="onFeedback"
				>
				<TextView
					android:id="@+id/plugin_feedback"
					style="@style/gridBox_Title"
					android:text="@string/feedback"
					/>
				<TextView
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_feedback"
					android:layout_toRightOf="@id/plugin_feedback"
				android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onFeedback"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>


			<!-- ADFREE -->
			<RelativeLayout
				android:id="@+id/plugin_pro_box"
				style="@style/gridBox"
				android:onClick="onADFree"
				android:visibility="gone"
				>
				<TextView
					android:id="@+id/plugin_adfree"
					style="@style/gridBox_Title"
					android:text="@string/ad_free"
					/>
				<TextView
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_adfree"
					android:layout_toRightOf="@id/plugin_adfree"
				android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onADFree"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>

			<TextView
				android:id="@+id/plugin_setting_title"
				style="@style/gridBox_desc"
				android:text="@string/about_other"
				android:textSize="17sp"

				 />

			<View
				android:id="@+id/plugin_setting_title_line"
				style="@style/p_line"

				 />

			<!-- pylib managerd -->
			<RelativeLayout
				android:id="@+id/plugin_pylib_box"
				style="@style/gridBox"
				android:onClick="onPyLib"
				android:visibility="gone"

				>
				<TextView
					android:id="@+id/plugin_pylib"
					style="@style/gridBox_Title"
					android:text="@string/plugin_pylib"
					/>
				<TextView
					android:id="@+id/plugin_pylib_value"
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_pylib"
					android:layout_toRightOf="@id/plugin_pylib"
				android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onPyLib"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>

			<!-- local managerd -->
			<RelativeLayout
				android:id="@+id/plugin_sl4a_box"
				style="@style/gridBox"
				android:onClick="onSL4ASetting"
				android:visibility="gone"

				>
				<TextView
					android:id="@+id/plugin_sl4a"
					style="@style/gridBox_Title"
					android:text="@string/plugin_sl4a"
					/>
				<TextView
					android:id="@+id/plugin_ftp_value"
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_sl4a"
					android:layout_toRightOf="@id/plugin_sl4a"
				android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onSL4ASetting"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>


			<RelativeLayout
				android:id="@+id/plugin_defaultqpy_box"
				style="@style/gridBox"
				android:onClick="onDefaultQPySetting"
				android:visibility="gone"

				>
				<TextView
					android:id="@+id/plugin_defaultqpy"
					style="@style/gridBox_Title"
					android:text="@string/plugin_defaultqpy"
					/>
				<TextView
					android:id="@+id/plugin_defaultqpy_value"
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_defaultqpy"
					android:layout_toRightOf="@id/plugin_defaultqpy"
					android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onDefaultQPySetting"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/plugin_mediacenter_box"
				style="@style/gridBox"
				android:onClick="onMediaCenterSetting"
				android:visibility="gone"

				>
				<TextView
					android:id="@+id/plugin_mediacenter"
					style="@style/gridBox_Title"
					android:text="@string/plugin_mediacenter"
					/>
				<TextView
					android:id="@+id/plugin_mediacenter_value"
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_mediacenter"
					android:layout_toRightOf="@id/plugin_mediacenter"
				android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onMediaCenterSetting"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>


			<!-- script -->
			<RelativeLayout
				android:id="@+id/plugin_script_box"
				style="@style/gridBox"
				android:onClick="enableScript"
				android:visibility="gone"
				>
				<TextView
					android:id="@+id/plugin_script"
					style="@style/gridBox_Title"
					android:text="@string/plugin_script_enable"
					/>
				<TextView
					android:id="@+id/plugin_script_value"
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_script"
					android:layout_toRightOf="@id/plugin_script"
					android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="enableScript"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>


			<RelativeLayout
				android:id="@+id/plugin_player_box"
				style="@style/gridBox"
				android:onClick="onPlayerSetting"
				android:visibility="gone"
				>
				<TextView
					android:id="@+id/plugin_player"
					style="@style/gridBox_Title"
					android:text="@string/plugin_player"
					/>
				<TextView
					android:id="@+id/plugin_player_value"
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_player"
					android:layout_toRightOf="@id/plugin_player"
				android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onPlayerSetting"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>


			<RelativeLayout
				android:id="@+id/plugin_resetprivate_box"
				style="@style/gridBox"
				android:onClick="onResetPrivate"
				android:visibility="gone"

				>
				<TextView
					android:id="@+id/plugin_resetprivate"
					style="@style/gridBox_Title"
					android:text="@string/plugin_resetprivate"
					/>
				<TextView
					android:id="@+id/plugin_resetprivate_value"
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_resetprivate"
					android:layout_toRightOf="@id/plugin_resetprivate"
					android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onResetPrivate"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>


			<!-- local managerd -->
			<RelativeLayout
				android:id="@+id/plugin_defaultroot_box"
				style="@style/gridBox"
				android:onClick="onDefaultRootSetting"
				android:visibility="gone"

				>
				<TextView
					android:id="@+id/plugin_defaultroot"
					style="@style/gridBox_Title"
					android:text="@string/plugin_defaultroot"
					/>
				<TextView
					android:id="@+id/plugin_defaultroot_value"
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_defaultroot"
					android:layout_toRightOf="@id/plugin_defaultroot"
				android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onDefaultRootSetting"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>

			<!-- ftp managerd -->
			<RelativeLayout
				android:id="@+id/plugin_ftp_box"
				style="@style/gridBox"
				android:onClick="onFtpSetting"
				android:visibility="gone"

				>
				<TextView
					android:id="@+id/plugin_ftp"
					style="@style/gridBox_Title"
					android:text="@string/plugin_ftp"
					/>
				<TextView
					android:id="@+id/plugin_ftp_value2"
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/plugin_ftp"
					android:layout_toRightOf="@id/plugin_ftp"
				android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onFtpSetting"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>

			<!-- proxy -->
			<RelativeLayout
				android:id="@+id/proxy_box"
				style="@style/gridBox"
				android:onClick="onSetProxy"
				android:visibility="gone"

				>
				<TextView
					android:id="@+id/proxy_setting"
					style="@style/gridBox_Title"
					android:text="@string/proxy_setting"
					/>

				<TextView
					android:id="@+id/proxy_value"
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/proxy_setting"
					android:layout_toRightOf="@id/proxy_setting"
					android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onSetProxy"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>


			<!-- pylib -->
			<RelativeLayout
				android:id="@+id/pylib_box"
				style="@style/gridBox"
				android:onClick="onPyLib"
				android:visibility="gone"

				>
				<TextView
					android:id="@+id/pylib_setting"
					style="@style/gridBox_Title"
					android:text="@string/pylib_setting"
					/>

				<TextView
					android:id="@+id/pylib_value"
					style="@style/gridBox_Value"
					android:layout_alignTop="@id/pylib_setting"
					android:layout_toRightOf="@id/pylib_setting"
					android:text=""
				/>
				<ImageView
					style="@style/gridBox_RTag"
					android:onClick="onPyLib"
					android:src="@drawable/mini_right_tag"
				/>
			</RelativeLayout>
		</LinearLayout>
	</ScrollView>
	</FrameLayout>



	<LinearLayout
		android:id="@+id/return_bar_box"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@color/cgrey6"
		android:visibility="gone"
		>
		<ImageButton
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_margin="10.0dip"
		android:layout_weight="1"
		android:background="@null"

		android:onClick="onBack"
		android:paddingTop="10dip"
		android:src="@drawable/ic_right_a"
		/>


		<ImageButton
		android:id="@+id/download_btn"
		style="@style/gridBox_Title"
		android:layout_width="0dp"

		android:layout_height="wrap_content"
    	android:layout_weight="3"
		android:background="@null"
		android:gravity="center"
		android:onClick="onBack"
		android:padding="5.0dip"
		android:scaleType="centerInside"
		android:src="@drawable/ic_undo"
		android:text="@string/proxy_save"
		android:textColor="@color/cwhite"
		android:textSize="18sp"
		/>
		<ImageButton
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_margin="10.0dip"
		android:layout_weight="1"
		android:background="@null"
		android:onClick="onLeft"
		android:src="@drawable/ic_right_a"
		/>

	</LinearLayout>
	<include layout="@layout/hi_ad_mod" />

</LinearLayout>
