<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:id="@+id/about_box"
    android:background="@color/cwhite3"	
    >
	<FrameLayout
		android:id="@id/gd_action_bar_content_view"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_weight="1"
		>
		<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
            >
			
			<LinearLayout
				android:paddingLeft="5dp"
				android:paddingRight="5dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="10.0dip"
				android:orientation="vertical">
				
				<TextView
				style="@style/gridBox_desc"
				android:id="@+id/about_title"
				android:text="@string/about_about"
				android:textSize="17sp" />
			
				<View style="@style/p_line"
					android:id="@+id/about_line"
				
				 />
				<!-- app desc-->
				
				<TextView
				android:id="@+id/about"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_content"
				android:textColor="@color/maintextcolor"
				android:paddingRight="10dp"
				android:paddingLeft="10dp"
				/>
				
				<TextView
				android:id="@+id/market_link"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:focusable="true"
				android:clickable="true"
				android:paddingRight="10dp"
				android:paddingLeft="20dp"
				android:text="http://quseit.com"
				android:textColor="@color/link"
				android:autoLink="web"
				android:textStyle="bold" 
				android:visibility="gone"
				/>			
				
				<!-- feedback and update-->
				<TextView 
				android:id="@+id/privacy_title"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:paddingLeft="10.0dip"
				android:paddingRight="10.0dip"
				android:paddingTop="10.0dip"
				
				android:text="@string/privacy_title"
				android:textColor="@color/maintextcolor"
				/>
				
				<TextView
				android:id="@+id/privacy_link"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:focusable="true"
				android:clickable="true"
				android:paddingRight="10dp"
				android:paddingLeft="20dp"
				android:text="@string/privacy_url"
				android:textColor="@color/link"
				android:maxLines="1"
				android:ellipsize="middle" 
				android:autoLink="web"
				android:textStyle="bold"
				/>	
				
				<!--update-->
				<TextView
                    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="10.0dip"
				android:paddingRight="10.0dip"
				android:paddingTop="10.0dip"
				android:text="@string/check_update" 
				android:textColor="@color/maintextcolor"
				android:visibility="gone"
				/>	
				
				<Button
				android:gravity="center"
                style="@style/gridBox_Title"
				android:text="@string/omenu_update"
				android:paddingTop="10dip"
				android:paddingBottom="10dip"
				android:visibility="gone"
				
				android:background="@drawable/background_button"
				android:layout_marginBottom="20.0dip"
				android:layout_marginLeft="50.0dip"
				android:layout_marginRight="50.0dip"					
				android:layout_width="fill_parent"
				android:scaleType="centerInside"
				android:textColor="@color/cwhite"
				android:onClick="checkUpdate"
				android:layout_height="wrap_content"
				/>
				
				<!--other-->
				<TextView
				android:paddingTop="20dip"
				style="@style/gridBox_desc"
                android:text="@string/about_other"
				android:visibility="gone"
				
				android:textSize="17sp" />
			
				<View style="@style/p_line"
                      android:visibility="gone"
				
				 />
				 
				<TextView
                    android:visibility="gone"
				
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingRight="10dp"
				android:paddingLeft="10dp"
				android:paddingBottom="20dp"

				android:textColor="@color/maintextcolor"
				/>
			</LinearLayout>
			
		</ScrollView>
	</FrameLayout>
	
	
	<LinearLayout
		android:id="@+id/return_bar_box"
		android:layout_width="fill_parent"
		android:background="@color/cgrey6"
		android:layout_height="wrap_content"
		>			
		
		<ImageButton
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:onClick="onFeedback"
		android:padding="5.0dip"
		android:layout_margin="0.0dip"
		android:src="@drawable/ic_feedback" 
		android:background="@null"
		/>
		
		
		<ImageButton
            android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:src="@drawable/ic_undo" 
		android:onClick="onBack"		
		android:padding="5.0dip"
		android:background="@drawable/transparent"
		/>
		
		<ImageButton
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:onClick="onShare"
		android:padding="5.0dip"
		android:src="@drawable/ic_social_share" 
		android:background="@null"
		/>
		
	</LinearLayout>	
	
</LinearLayout>