<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
 
    <TextView android:id="@+id/title1"
    	style="@style/prompt_title"    	
        />
       	<Button
				android:gravity="center"
				android:id="@+id/editText_prompt1"
				style="@style/gridBox_Title"
				android:text="@string/rate_btn"
				android:paddingTop="10dip"
				android:paddingBottom="10dip"
				
				android:background="@drawable/background_button_cmain3"
				android:layout_marginBottom="20.0dip"
				android:layout_marginLeft="20.0dip"
				android:layout_marginRight="20.0dip"					
				android:layout_width="fill_parent"
				android:scaleType="centerInside"
				android:textColor="@color/cwhite"
				android:layout_height="wrap_content"
				/>
 
     <TextView android:id="@+id/title2"
    	style="@style/prompt_title"
    	
         />
         
         
         		<Button
				android:gravity="center"
				android:id="@+id/editText_prompt2"
				style="@style/gridBox_Title"
				android:text="@string/follow_community_btn"
				android:paddingTop="10dip"
				android:paddingBottom="10dip"
				
				android:background="@drawable/background_button_cmain3"
				android:layout_marginBottom="20.0dip"
				android:layout_marginLeft="20.0dip"
				android:layout_marginRight="20.0dip"					
				android:layout_width="fill_parent"
				android:scaleType="centerInside"
				android:textColor="@color/cwhite"
				android:layout_height="wrap_content"
				/>
				

     <TextView android:id="@+id/title3"
    	style="@style/prompt_title"
    	
         />
         
         
         		<Button
				android:gravity="center"
				android:id="@+id/editText_prompt3"
				style="@style/gridBox_Title"
				android:text="@string/feedback_btn"
				android:paddingTop="10dip"
				android:paddingBottom="10dip"
				
				android:background="@drawable/background_button_cmain3"
				android:layout_marginBottom="20.0dip"
				android:layout_marginLeft="20.0dip"
				android:layout_marginRight="20.0dip"					
				android:layout_width="fill_parent"
				android:scaleType="centerInside"
				android:textColor="@color/cwhite"
				android:layout_height="wrap_content"
				/>				
         


</LinearLayout>
